Update and rename dissertation_template_latex_sample.tex to main.tex

--- a/main.tex
+++ b/main.tex
@@ -907,6 +907,108 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
+Many sophisticated, experimentally informed models neurons and neuronal networks exist, yet, these models are limited to the target neuron class and brain region they were designed to explain. 
+
+A systematic, and thorough comparison of neuron model behavior, has not yet been performed, and it is unknown how differently classes of models behave with respect to one another. The NeuroML model database, NeuroML-DB, contains hundreds of biophysically realistic models of different cortical neurons (REF), including those of the Blue Brain Project (REF) and the Allen Brain Institute (Kuan 2015). The database also provides …
+
+
+SPECIFIC AIMS 
+
+Aim 1: Characterize region-specific differences of neuron-types in cortex.
+1A: We will analyze models of neuron-types from different cortical regions to characterize region-specific differences and the features underlying these differences. 
+1B: Using large, publicly available datasets for neuron classes, we will evaluate neuron-type models for agreement with data.
+
+Aim 2: Analyze existing network models that represent different cortical regions.
+2A: We will develop validation tests for comparing large-scale models to experimental data.
+2B: By comparing network models to multiunit recording counterparts, we will validate network behaviors and evaluate robustness.
+RESEARCH STRATEGY 
+•	Significance: we will provide a systematic means of evaluating organism against organism differences.
+
+•	Bootstrapping and imputing missing data (morphologies, natural input stimulus, synaptic densities)
+
+•	Model to model differencing, and model to data comparisons, might . 
+
+•	Although people do model to data disagreement checks, regardless, they do not necessarily perform this check in a standardized and repeatable way.
+
+APPROACH
+
+Often network models use synthetic morphologies, to make up for missing morphology reconstructions.
+
+o	This is where I mention previous work, in neuronunit and optimization on single cells.
+
+•	Regarding single neuron models.
+
+•	Regarding only network models, rather than building models from scratch, we intend to take models that exist, and merely modify, pre-existing models superficially, by only changing synapse properties, such as synapse density, and synapse density. and wiring properties, but not other neuron wiring ion channel properties.
+•	for example. 
+•	Speed of simulation convergence, versus relevance of results
+o	: PyNN, SpiNNaker, BrainScales, 
+•	Neuron models, that best represent computational tractability, to waveform flexibility.
+
+
+
+
+Specific Aim 1:
+Rationale
+
+•	Single Neuron, and neuron network Models are by necessity derived from incomplete data sources, and Mix and match models are ubiquitous.
+Preliminary Work:
+Experimental Design Model preparation: 
+Preliminary Work:
+Experimental Design Model preparation:
+Hypotheses, Experiments, Analysis, and Expected Outcomes: 
+A. Hypothesis: 
+Experiment:
+Analysis:
+Expected Outcome: 
+B. Hypothesis: 
+Experiment I: 
+Experiment II: 
+Expected Outcomes:
+C. Hypothesis:
+Experiment: 
+Analysis: 
+Expected Outcome:
+Potential Problems and Alternatives
+Specific Aim 2: Network
+Preliminary Work:
+Experimental Design
+EXPANDED BACKGROUND 
+Introduction
+
+
+
+
+
+
+Traub model, and many other models
+Copy headings over from Melissa’s draft
+
+Headings
+Specific Aims
+
+Aim 2: network to network tests
+model 2 model, model 2 data.
+Significance
+More modelling progress.
+
+The field will benefit from knowing if an V1 network can be reparameterized to act like a somatosensory network, or an A1 network.
+
+Innovation
+
+Using as a starting point, existing models, as proxies for new models.
+
+Is model 2 model difference bigger than model 2 data difference?
+
+What level of difference is tolerable?
+Approach
+
+Julia, Python
+Timeline.
+Backup approaches.
+
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Title page
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
