synch files to overleaf

--- a/main.tex
+++ b/main.tex
@@ -1034,7 +1034,7 @@
 \caption{Principal Component Analysis}
 \label{figure\arabic{figurecounter}}
 \legend{Feature Variance distributed though-out a plane, the plane was output from applying dimension reduction to a high dimensional (552 dim) feature Space. The plane is related to two projection vectors that were  point in the directions of maximal variance in the data. Data is comprised by a collection of reduced neuronal models, and real recordings of voltage traces from neurons. Data and models are so different in this space that they are easily discriminated, and they fall into several natural clusters. Random Forests variance explained was later used to identify, dimensions that contributed the most variance.
-\emph{T-Distributed Stochastic Nearest Neighbour Spatial Embedding} }}
+\emph{T-Distributed Stochastic Nearest Neighbour Spatial Embedding} }
 
 \end{figure}
 
@@ -1047,8 +1047,8 @@
 \end{figure}
 
 
-\include{sample_chapter.tex}    
-
+\include{Optimization_of_existing_models_to_align_them_with_data.tex}\include{Optimization_of_models_to_find_diverse_solutions_for_the_same_behaviors.tex}        
+\include{Technical_details_of_optimizer.tex}
 %<Insert your chapters here; I recommend to use
 %\include{chapter2}                     %   \include rather than \input for chapters
 %\include{chapter3}% etc.
