--- a/sample_dedication.tex
+++ b/sample_dedication.tex
@@ -1,6 +1,3 @@
 \leavevmode\vfill
-Here is a dummy dedication.
-The dedication can be vertically centered like this text is.
-See the \LaTeX\ code for this dedication to see how to vertically center the text of
-your dedication.
+I dedicate this theis to my parents who put a value on higher education.
 \vfill
