--- a/sample_chapter.tex
+++ b/sample_chapter.tex
@@ -1,10 +1,34 @@
-\chapter{This is a chapter-level heading}
+\chapter{Introduction}
 
 \lipsum[1]
 
-\section{This is the first section-level heading}
+In this research effort, 
+\section{Specific Aims}
 
-\lipsum[1]
+
+\subsubsection{1A:} Optimize reduced neuronal models across four different cell types, using two different classes of models:
+ 
+
+\begin{centre} 
+ \begin{tabular}{|c|c|c|c|}
+ 	\hline 
+ 	olfactory bulb mitral cell & layer IV pyramidal neuron & cerebellar purkinje cell & ca1 pyramidal cell \\ 
+ 	\hline 
+ 	& HH model score &  HH Model score&  HH model score & HH model score\\ 
+ 	\hline 
+ 	& Izhikitich model score  & Izhikitich model score & Izhikitich model score& Izhikitich model score \\ 
+ 	\hline 
+ \end{tabular} 
+\end{centre} 
+ 
+
+ 
+\subsubsection{2A:} By fitting  cellular models to experimental data, using spike waveform shape features,  we can then take optimized models, and characterize and cellular behaviors using Allen SDK and EFEL feature extraction software to evaluate electrical robustness across a large number of features.	
+
+
+\subsubsection{Aim 2:} Characterize and evaluate region-specific differences of cortical neuron-type data and models.
+\subsubsection{2A:} Using large, publicly available datasets for neuron classes, we will characterize region-specific differences and evaluate neuron-type models for agreement with experimental data.
+\subsubsection{2B:} Using models of neuron-types from different cortical regions we will identify the features underlying differences among neuron types and across regions, as well as the biophysical mechanisms that underlie those features. 
 
 \subsection{This is the first sub-section-level heading}
 
