Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -47,7 +47,7 @@
 \listadd{\titlelines}%
   {Data Driven Optimization of Reduced Neural Models}             %<Enter the title of the dissertation
 \listadd{\titlelines}%
-  {With a Large Scale Analysis of Models and Data}            % If you want to
+  {and Validation in the context of Large Scale Comparisons of Models and Data}            % If you want to
                                         %   split the title across lines,
                                         %   use another \listadd command for the
                                         %   second line
