--- a/main.tex
+++ b/main.tex
@@ -901,6 +901,7 @@
 % Debugging Help
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{lipsum}                     % Outputs dummy text
+\usepackage{subfiles} % Best loaded last in the preamble
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Document
@@ -927,7 +928,10 @@
 \frontmatter
 
 \chapter*{Abstract}                     % Abstract is required
-\input{template/sample_abstract}                 %<Enter the name of the .tex file containing your
+
+
+
+%\input{template/sample_abstract}                 %<Enter the name of the .tex file containing your
                                         %   your abstract or omit this line and type in
                                         %   your abstract here.
 
@@ -1006,6 +1010,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter
 
+
+\subsection{1A}: Optimize reduced neuron models with respect to data from four different neuron types, using two different classes of models. Optimize neuron models to create agreement with electrophysiological measurements.
+\subsection{1B:} Validate the optimization approach using analysis of variance in many pre existing models and experimental data together. Test how well optimized models mimic experimental data relative to pre-existing models and data. 
+
+\subsection{2A:} Using large, publicly available datasets for neuron classes, we will characterize region-specific differences and evaluate neuron-type models for agreement with experimental data.
+\subsection{2B:} Using models of neuron-types from different cortical regions we will identify the features underlying differences among neuron types and across regions, as well as the biophysical mechanisms that underlie those features. 
+
+    
 
 
 \section{Further Validation of Optimized Models}
